# FaceTrack

./: README.md
Source_code/: .gitignore  CMakeLists.txt  facetracking.cpp  facialmesh.cpp  keyframeselection.cpp  mainwindow.cpp  modelfitting.cpp  modelfitting.ui  onlymesh.cpp  results.cpp  run.sh
Source_code/candide-fit/src/resources/: candide3.wfm
Source_code/data/: candide3_v3.wfm
Source_code/resources/: resources.qrc
